# Trabalho-DCC059-A

./: .gitignore  CMakeLists.txt  Como compilar o código.txt  README.md  arquivoDeEntrada.txt  arquivoDeSaida.dot  arquivoDeSaida.txt  exec.sh  execGrupo5  main.cpp  menu.cpp
instancias/: CMakeLists.txt
src/: Edge.cpp  Edge.h  EdgeList.cpp  EdgeList.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Solution.h  Vertex.cpp  Vertex.h  VertexData.h  VertexList.cpp  VertexList.h
